# slippy-map

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  coverity.yml  cppcheck.yml  lint.yml  tests.yml
src/: CMakeLists.txt  main.cpp
src/tiles/: MapModel.cpp  MapModel.hpp  MapView.cpp  MapView.hpp  Renderer.cpp  Renderer.hpp  Tile.hpp  TileDownloader.cpp  TileDownloader.hpp  Utils.cpp  Utils.hpp
tests/: CMakeLists.txt  MapModel_tests.cpp  Utils_tests.cpp
tiles/inc/: Utils.hpp
tiles/tests/: CMakeLists.txt  Utils_tests.cpp
